PRJ_VER=1.3.6.20100806
SUMMARY=Resolves: #608991
# Changes
- Resolves: #608991
- Update CMake macros to use new GIT infrastructure
