@@ -1,6 +1,7 @@
-PRJ_VER=1.3.6.20100806
+PRJ_VER=1.3.6.20100810
 SUMMARY=Resolves: #608991
 # Changes
 - Resolves: #608991
 - Update CMake macros to use new GIT infrastructure
+- Fixed Issue 1022: chewing commit some text in reset method (patched by Peng Huang).
 
